--- a/ContaJunsta/wwwroot/index.html
+++ b/ContaJunsta/wwwroot/index.html
@@ -9,6 +9,7 @@
     <link rel="stylesheet" href="css/app.css" />
     <!-- If you add any scoped CSS files, uncomment the following to load them -->
     <link href="ContaJunsta.styles.css" rel="stylesheet" />
+    <script src="js/db.js"></script>
     <link href="manifest.webmanifest" rel="manifest" />
     <link rel="apple-touch-icon" sizes="512x512" href="icon-512.png" />
     <link rel="apple-touch-icon" sizes="192x192" href="icon-192.png" />
